# MiniKDENotify

./: .gitignore  CMakeLists.txt
cmake/: MiniKDENotifyConfig.cmake.in  version.hpp.in
examples/: CMakeLists.txt  example_main.cpp
include/MiniKDENotify/: MiniKDENotify.hpp
